@@ -122,6 +122,15 @@ gdk_pixbuf_non_anim_new
 #endif
 #endif
 
+#if IN_HEADER(GDK_PIXBUF_SIMPLE_ANIM_H)
+#if IN_FILE(__GDK_PIXBUF_SIMPLE_ANIM_C__)
+gdk_pixbuf_simple_anim_get_type G_GNUC_CONST
+gdk_pixbuf_simple_anim_new
+gdk_pixbuf_simple_anim_add_frame
+gdk_pixbuf_simple_anim_iter_get_type G_GNUC_CONST
+#endif
+#endif
+
 #if IN_HEADER(GDK_PIXBUF_IO_H)
 #if IN_FILE(__GDK_PIXBUF_IO_C__)
 gdk_pixbuf_get_formats
